Added support for ClusterPlug HotPlug
my changes:
updated to v2.0

Change-Id: I4cbfc5bf63e02bf91eae10a8c773e52c86211a9c
Signed-off-by: Martinusbe <martinusbe@gmail.com>

--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -51,8 +51,9 @@ CONFIG_BRICKED_HOTPLUG=y
 CONFIG_CHARGE_LEVEL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_BOEFFLA_SOUND=y
-CONFIG_THUNDERPLUG_CONTROL=y
+CONFIG_THUNDERPLUG_CONTROL=n
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_CLUSTER_PLUG=y
 
 
 #
