--- a/arch/arm64/hotplug/Kconfig
+++ b/arch/arm64/hotplug/Kconfig
@@ -3,3 +3,10 @@ config THUNDERPLUG_CONTROL
 	default y
 	help
 	  This driver hotplugs cpu cores based on per-core load
+
+
+config CLUSTER_PLUG
+ bool "Enable cluster-plug cpu hotplug driver"
+ default n
+ help
+   CPU hotplug driver designed for ARM big.LITTLE systems where both the big and little CPUs are of the same type. On these systems, it preferable to normall use the big cluster, and only activate the little cluster for highly parallel loads. This hotplug implementation always keeps the big cluster online, and only activates the little cluster for heavy parallel loads.
