--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -31,7 +31,6 @@ CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 
 #
-CONFIG_CHARGE_LEVEL=y
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
@@ -46,6 +45,8 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
+CONFIG_CHARGE_LEVEL=y
+CONFIG_TOUCHSCREEN_SWEEP2SLEEP
 
 #
 # IRQ subsystem
