--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -47,6 +47,7 @@ CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFIG_CHARGE_LEVEL=y
 CONFIG_TOUCHSCREEN_SWEEP2SLEEP
+CONFIG_MSM_LIMITER=y
 
 #
 # IRQ subsystem
