--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -48,6 +48,7 @@ CONFIG_AUDIT=y
 CONFIG_CHARGE_LEVEL=y
 CONFIG_TOUCHSCREEN_SWEEP2SLEEP
 CONFIG_MSM_LIMITER=y
+CONFIG_STATE_NOTIFIER=y
 
 #
 # IRQ subsystem
