--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -259,8 +259,8 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
-CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_BFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
