defconfig: kexec hardboot
Change-Id: I11ee8f0059209a825574218ffb0904a5bde50d90
Signed-off-by: Martinusbe <martinusbe@gmail.com>

--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -56,6 +56,11 @@ CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_CLUSTER_PLUG is not set
 
 
+CONFIG_KEXEC=y
+CONFIG_KEXEC_HARDBOOT=y
+CONFIG_ATAGS_PROC=n
+CONFIG_PROC_DEVICETREE=y
+
 #
 # IRQ subsystem
 #
@@ -980,7 +985,6 @@ CONFIG_OF=y
 #
 # Device Tree and Open Firmware support
 #
-# CONFIG_PROC_DEVICETREE is not set
 # CONFIG_OF_SELFTEST is not set
 CONFIG_OF_FLATTREE=y
 CONFIG_OF_EARLY_FLATTREE=y
