--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -50,6 +50,7 @@ CONFIG_TOUCHSCREEN_SWEEP2SLEEP
 CONFIG_MSM_LIMITER=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_THUNDERPLUG_CONTROL=y
+CONFIG_LCD_NOTIFIER=y
 
 CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
