defconfig: enable kcal
Change-Id: I255c7a8c03c662b8bcae11177717b9fe6abdf3d5
Signed-off-by: Martinusbe <martinusbe@gmail.com>

--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -51,6 +51,7 @@ CONFIG_MSM_LIMITER=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_THUNDERPLUG_CONTROL=y
 CONFIG_LCD_NOTIFIER=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 
 CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
