--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -654,6 +654,12 @@ config BRICKED_HOTPLUG
 	default y
 	help
 	 This enables kernel based multi core control.
+
+config THUNDERPLUG_CONTROL
+	bool "Enable plugging down/up of cores using powersuspend"
+	help
+	  This driver uses powersuspend to take down the cpu cores
+	  on a octa core device.
 	  
 config STATE_NOTIFIER
         bool "State Notifier"
