thunderplug: fix up CONFIG_SCHED_HMP logic * update kconfig for latest changes
Change-Id: Idea503f6a47fcbe24df939e148f667969348d19b

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -656,10 +656,9 @@ config BRICKED_HOTPLUG
 	 This enables kernel based multi core control.
 
 config THUNDERPLUG_CONTROL
-	bool "Enable plugging down/up of cores using powersuspend"
-	help
-	  This driver uses powersuspend to take down the cpu cores
-	  on a octa core device.
+ 	bool "Enable plugging down/up of cores based on load per core"
+ 	help
+ 	  This driver hotplugs cpu cores based on per-core load
 	  
 config STATE_NOTIFIER
         bool "State Notifier"
