oneplus2: defconfig: enable clusterplug
Change-Id: Ib53a8294b4d1935760854246f9182c0cdda859ba
Signed-off-by: Martinusbe <martinusbe@gmail.com>

--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -52,6 +52,7 @@ CONFIG_STATE_NOTIFIER=y
 CONFIG_LCD_NOTIFIER=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_THUNDERPLUG_CONTROL=y
+CONFIG_CLUSTER_PLUG=y
 
 CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
