--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -45,6 +45,10 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
+CONFIG_MSM_LIMITER=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_BRICKED_HOTPLUG=y
+
 
 #
 # IRQ subsystem
@@ -137,7 +141,6 @@ CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
 CONFIG_HOTPLUG=y
-CONFIG_BRICKED_HOTPLUG=y
 CONFIG_MSM_HOTPLUG=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EXPERT=y
