--- a/arch/arm64/configs/cm_oneplus2_defconfig
+++ b/arch/arm64/configs/cm_oneplus2_defconfig
@@ -51,6 +51,7 @@ CONFIG_BRICKED_HOTPLUG=y
 CONFIG_CHARGE_LEVEL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_BOEFFLA_SOUND=y
+CONFIG_DYNAMIC_FSYNC=y
 
 
 #
